run for first time

--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.12.1+cu113'"
+       "'1.12.0+cu116'"
       ]
      },
      "execution_count": 1,
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -322,7 +322,7 @@
        "tensor([7, 7])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -361,7 +361,7 @@
        "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,10 +533,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([7, 8])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MATRIX[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(8)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MATRIX[0][1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dvLpUvrKTGe4"
-   },
+   "metadata": {},
    "source": [
     "We get the output `torch.Size([2, 2])` because `MATRIX` is two elements deep and two elements wide.\n",
     "\n",
@@ -636,7 +674,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "hdVv4iNRTGe5",
-    "outputId": "d8ac706c-020b-4926-b145-d44e41f35e90"
+    "outputId": "d8ac706c-020b-4926-b145-d44e41f35e90",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -653,6 +692,68 @@
    "source": [
     "# Check shape of TENSOR\n",
     "TENSOR.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [3, 6, 9],\n",
+       "        [2, 4, 5]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3, 6, 9])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TENSOR[0][1][2]"
    ]
   },
   {
@@ -728,9 +829,9 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[0.3554, 0.3453, 0.3330, 0.2967],\n",
-       "         [0.1251, 0.0410, 0.0230, 0.8989],\n",
-       "         [0.2398, 0.1786, 0.7962, 0.1559]]),\n",
+       "(tensor([[0.9280, 0.3739, 0.0332, 0.6563],\n",
+       "         [0.8557, 0.7243, 0.3399, 0.6026],\n",
+       "         [0.5430, 0.9890, 0.8948, 0.6885]]),\n",
        " torch.float32)"
       ]
      },
@@ -907,7 +1008,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_32574/193451495.py:2: UserWarning: torch.range is deprecated and will be removed in a future release because its behavior is inconsistent with Python's range builtin. Instead, use torch.arange, which produces values in [start, end).\n",
+      "/tmp/ipykernel_19394/193451495.py:2: UserWarning: torch.range is deprecated and will be removed in a future release because its behavior is inconsistent with Python's range builtin. Instead, use torch.arange, which produces values in [start, end).\n",
       "  zero_to_ten_deprecated = torch.range(0, 10) # Note: this may return an error in the future\n"
      ]
     },
@@ -1128,9 +1229,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2423, 0.6624, 0.3201, 0.3021],\n",
-      "        [0.7961, 0.9539, 0.0791, 0.8537],\n",
-      "        [0.3491, 0.6429, 0.8308, 0.4690]])\n",
+      "tensor([[0.5384, 0.9244, 0.6184, 0.5181],\n",
+      "        [0.6015, 0.9893, 0.9175, 0.6020],\n",
+      "        [0.1305, 0.5317, 0.4260, 0.7810]])\n",
       "Shape of tensor: torch.Size([3, 4])\n",
       "Datatype of tensor: torch.float32\n",
       "Device tensor is stored on: cpu\n"
@@ -1629,8 +1730,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 97 µs, sys: 100 µs, total: 197 µs\n",
-      "Wall time: 265 µs\n"
+      "CPU times: user 139 µs, sys: 119 µs, total: 258 µs\n",
+      "Wall time: 172 µs\n"
      ]
     },
     {
@@ -1669,8 +1770,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 46 µs, sys: 0 ns, total: 46 µs\n",
-      "Wall time: 34.6 µs\n"
+      "CPU times: user 44 µs, sys: 38 µs, total: 82 µs\n",
+      "Wall time: 54.6 µs\n"
      ]
     },
     {
@@ -1711,19 +1812,7 @@
     "id": "rN5RcoD4Jo6y",
     "outputId": "20f6c65b-86f4-4903-d253-f6cbf0583934"
    },
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m tensor_A \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m],\n\u001b[1;32m      3\u001b[0m                          [\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m],\n\u001b[1;32m      4\u001b[0m                          [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m]], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m      6\u001b[0m tensor_B \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([[\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m10\u001b[39m],\n\u001b[1;32m      7\u001b[0m                          [\u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m11\u001b[39m], \n\u001b[1;32m      8\u001b[0m                          [\u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m12\u001b[39m]], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m---> 10\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtensor_A\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtensor_B\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Shapes need to be in the right way  \n",
     "tensor_A = torch.tensor([[1, 2],\n",
@@ -1734,7 +1823,7 @@
     "                         [8, 11], \n",
     "                         [9, 12]], dtype=torch.float32)\n",
     "\n",
-    "torch.matmul(tensor_A, tensor_B) # (this will error)"
+    "# torch.matmul(tensor_A, tensor_B) # (this will error)"
    ]
   },
   {
@@ -3288,28 +3377,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Nov 10 16:06:00 2022       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 515.48.07    Driver Version: 515.48.07    CUDA Version: 11.7     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                               |                      |               MIG M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  NVIDIA TITAN RTX    On   | 00000000:01:00.0 Off |                  N/A |\n",
-      "| 41%   30C    P8     6W / 280W |    206MiB / 24576MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "|    0   N/A  N/A      1081      G   /usr/lib/xorg/Xorg                 53MiB |\n",
-      "|    0   N/A  N/A      1599      G   /usr/lib/xorg/Xorg                 95MiB |\n",
-      "|    0   N/A  N/A      1726      G   /usr/bin/gnome-shell               44MiB |\n",
-      "+-----------------------------------------------------------------------------+\n"
+      "Tue Jan 24 21:59:26 2023       \r\n",
+      "+-----------------------------------------------------------------------------+\r\n",
+      "| NVIDIA-SMI 525.60.13    Driver Version: 525.60.13    CUDA Version: 12.0     |\r\n",
+      "|-------------------------------+----------------------+----------------------+\r\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
+      "|                               |                      |               MIG M. |\r\n",
+      "|===============================+======================+======================|\r\n",
+      "|   0  NVIDIA GeForce ...  On   | 00000000:01:00.0  On |                  N/A |\r\n",
+      "| 31%   29C    P5    30W / 125W |   1084MiB /  6144MiB |      2%      Default |\r\n",
+      "|                               |                      |                  N/A |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "                                                                               \r\n",
+      "+-----------------------------------------------------------------------------+\r\n",
+      "| Processes:                                                                  |\r\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
+      "|        ID   ID                                                   Usage      |\r\n",
+      "|=============================================================================|\r\n",
+      "|    0   N/A  N/A      1930      G   /usr/lib/xorg/Xorg                346MiB |\r\n",
+      "|    0   N/A  N/A      2100      G   /usr/bin/gnome-shell              166MiB |\r\n",
+      "|    0   N/A  N/A      2963    C+G   ...928202567150856365,131072      565MiB |\r\n",
+      "+-----------------------------------------------------------------------------+\r\n"
      ]
     }
    ],
@@ -3604,22 +3693,10 @@
     "id": "3ChSLJgPTGfG",
     "outputId": "32e92f62-db28-4dc7-ce93-c2ab33229252"
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [75]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# If tensor is on GPU, can't transform it to NumPy (this will error)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtensor_on_gpu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If tensor is on GPU, can't transform it to NumPy (this will error)\n",
-    "tensor_on_gpu.numpy()"
+    "# tensor_on_gpu.numpy()"
    ]
   },
   {
@@ -3765,7 +3842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
